confusion to create hover image overlay

--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
   <body>
     <div class="container">
       <main>
-        <img class="main-img" src="/images/image-equilibrium.jpg" alt="equilibrium" />
-
+        <div class="img">
+          <img class="main-img" src="/images/image-equilibrium.jpg" alt="equilibrium" />
+          <div class="img-overlay">
+            <img src="images/icon-view.svg" alt="overlay">
+          </div>
+        </div>
         <div class="text">
           <h1>Equilibrium #3429</h1>
           <h2>Our Equilibrium collection promotes balance and calm.</h2>
           <div class="icon">
             <div class="eth">
-              <img src="images/icon-ethereum.svg" width="20px" height="30px" alt="ethereum" />
+              <img src="images/icon-ethereum.svg" alt="ethereum" />
               <h3>0.041 ETH</h3>
             </div>
             <div class="time">
-              <img src="images/icon-clock.svg" width="20px" height="30px" alt="clock" />
+              <img src="images/icon-clock.svg" alt="clock" />
               <h3>3 days left</h3>
             </div>
           </div>
@@ -32,7 +36,7 @@
         <hr />
         <div class="creator">
           <img src="images/image-avatar.png" alt="creator avatar" />
-          <h4>Creation of Jules Wyvern</h4>
+          <h4>Creation of <span>Jules Wyvern</span></h4>
         </div>
       </main>
 
