finally got rid of the scroll bar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
       <main>
         <div class="img">
-          <img class="main-img" src="/images/image-equilibrium.jpg" alt="equilibrium" />
+          <img class="main-img" src="images/image-equilibrium.jpg" alt="equilibrium" />
           <div class="img-overlay">
-            <img src="images/icon-view.svg" alt="overlay">
+            <img src="images/icon-view.svg" alt="overlay" />
           </div>
         </div>
         <div class="text">
